--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<header-component></header-component>
+
+<router-outlet></router-outlet>
+
+<footer-component></footer-component>
+
+
